# axum-derive-otel

./: Cargo.toml  README.md
axum-derive-otel-core/: Cargo.toml
axum-derive-otel-core/src/: lib.rs
axum-derive-otel-macro/: Cargo.toml
axum-derive-otel-macro/src/: lib.rs
axum-derive-otel-macro/src/with_parent_span/: mod.rs  tests.rs  with_parent_span.rs
src/: lib.rs
